Bug 286663 - Kontact crashed when canceling creation of sieve script
Summary: Kontact crashed when canceling creation of sieve script
Status: CLOSED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: filtering (other bugs)
Version First Reported In: 4.7
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 298941 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-11-15 09:12 UTC by karaluh
Modified: 2012-04-29 13:01 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.4
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (7.82 KB, text/plain)
2012-02-28 06:30 UTC, Bruno Friedmann
Details

Note You need to log in before you can comment on or make changes to this bug.
Description karaluh 2011-11-15 09:12:27 UTC
Application: kontact (4.7.3)
KDE Platform Version: 4.7.3 (4.7.3)
Qt Version: 4.7.4
Operating System: Linux 3.0.0-13-generic i686
Distribution: Ubuntu 11.10

-- Information about the crash:
- What I was doing when the application crashed:
As in summary. The word limit in crash dialog assistant is stupid.

-- Backtrace:
Application: Kontact (kontact), signal: Segmentation fault
[Current thread is 1 (Thread 0xb7775730 (LWP 2952))]

Thread 3 (Thread 0xb6758b70 (LWP 3164)):
#0  0x00865416 in __kernel_vsyscall ()
#1  0x04532a5c in pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/i386/i686/../i486/pthread_cond_wait.S:169
#2  0x071aecfc in __pthread_cond_wait (cond=0x2754430, mutex=0x2754418) at forward.c:139
#3  0x02033883 in ?? () from /usr/lib/i386-linux-gnu/libQtWebKit.so.4
#4  0x0203399f in ?? () from /usr/lib/i386-linux-gnu/libQtWebKit.so.4
#5  0x0452ed31 in start_thread (arg=0xb6758b70) at pthread_create.c:304
#6  0x071a10ce in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:130
Backtrace stopped: Not enough registers or memory available to unwind further

Thread 2 (Thread 0xb5e2fb70 (LWP 3170)):
#0  0x00865416 in __kernel_vsyscall ()
#1  0x0719240e in __GI___poll (fds=0x842cd00, nfds=1, timeout=1717) at ../sysdeps/unix/sysv/linux/poll.c:87
#2  0x077ea34b in g_poll () from /lib/i386-linux-gnu/libglib-2.0.so.0
#3  0x077db896 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#4  0x077dbc2a in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#5  0x00efcb37 in QEventDispatcherGlib::processEvents (this=0x842cda8, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#6  0x00ecd1dd in QEventLoop::processEvents (this=0xb5e2f2c0, flags=...) at kernel/qeventloop.cpp:149
#7  0x00ecd421 in QEventLoop::exec (this=0xb5e2f2c0, flags=...) at kernel/qeventloop.cpp:201
#8  0x00dd090b in QThread::exec (this=0x82b2768) at thread/qthread.cpp:498
#9  0x00dd09fb in QThread::run (this=0x82b2768) at thread/qthread.cpp:565
#10 0x00dd37b3 in QThreadPrivate::start (arg=0x82b2768) at thread/qthread_unix.cpp:331
#11 0x0452ed31 in start_thread (arg=0xb5e2fb70) at pthread_create.c:304
#12 0x071a10ce in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:130
Backtrace stopped: Not enough registers or memory available to unwind further

Thread 1 (Thread 0xb7775730 (LWP 2952)):
[KCrash Handler]
#7  KManageSieve::SieveJob::kill (this=0xb0, verbosity=KJob::Quietly) at ../../../libksieve/kmanagesieve/sievejob.cpp:238
#8  0x0426aacb in KSieveUi::ManageSieveScriptsDialog::killAllJobs (this=0xa9f3630, disconnectSignal=false) at ../../../libksieve/ksieveui/managesievescriptsdialog.cpp:80
#9  0x0426c2f7 in KSieveUi::ManageSieveScriptsDialog::clear (this=0xa9f3630, disconnect=false) at ../../../libksieve/ksieveui/managesievescriptsdialog.cpp:285
#10 0x0426c60c in KSieveUi::ManageSieveScriptsDialog::slotRefresh (this=0xa9f3630) at ../../../libksieve/ksieveui/managesievescriptsdialog.cpp:89
#11 0x0426cccb in KSieveUi::ManageSieveScriptsDialog::slotSieveEditorCancelClicked (this=0xa9f3630) at ../../../libksieve/ksieveui/managesievescriptsdialog.cpp:439
#12 0x0426cd4c in KSieveUi::ManageSieveScriptsDialog::qt_metacall (this=0xa9f3630, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0xbfd24fa4) at ./managesievescriptsdialog.moc:110
#13 0x00ed4b7d in metacall (argv=0xbfd24fa4, idx=86, cl=QMetaObject::InvokeMetaMethod, object=0xa9f3630) at kernel/qmetaobject.cpp:237
#14 QMetaObject::metacall (object=0xa9f3630, cl=QMetaObject::InvokeMetaMethod, idx=86, argv=0xbfd24fa4) at kernel/qmetaobject.cpp:232
#15 0x00ee3a6a in QMetaObject::activate (sender=0xb5c0e50, m=0x535a48, local_signal_index=12, argv=0x0) at kernel/qobject.cpp:3278
#16 0x0023a995 in KDialog::cancelClicked (this=0xb5c0e50) at ./kdialog.moc:276
#17 0x0023b020 in KDialog::slotButtonClicked (this=0xb5c0e50, button=32) at ../../kdeui/dialogs/kdialog.cpp:911
#18 0x0023b603 in KDialog::qt_metacall (this=0xb5c0e50, _c=QMetaObject::InvokeMetaMethod, _id=33, _a=0xbfd25178) at ./kdialog.moc:190
#19 0x0426a532 in KSieveUi::SieveEditor::qt_metacall (this=0xb5c0e50, _c=QMetaObject::InvokeMetaMethod, _id=69, _a=0xbfd25178) at ./managesievescriptsdialog_p.moc:71
#20 0x00ed4b7d in metacall (argv=0xbfd25178, idx=69, cl=QMetaObject::InvokeMetaMethod, object=0xb5c0e50) at kernel/qmetaobject.cpp:237
#21 QMetaObject::metacall (object=0xb5c0e50, cl=QMetaObject::InvokeMetaMethod, idx=69, argv=0xbfd25178) at kernel/qmetaobject.cpp:232
#22 0x00ee3a6a in QMetaObject::activate (sender=0xb5db6b4, m=0x10041b8, local_signal_index=0, argv=0xbfd25178) at kernel/qobject.cpp:3278
#23 0x00ee9b15 in QSignalMapper::mapped (this=0xb5db6b4, _t1=32) at .moc/release-shared/moc_qsignalmapper.cpp:101
#24 0x00ee9c62 in QSignalMapper::map (this=0xb5db6b4, sender=0xb4bad58) at kernel/qsignalmapper.cpp:266
#25 0x00ee9e1e in QSignalMapper::map (this=0xb5db6b4) at kernel/qsignalmapper.cpp:257
#26 0x00ee9f50 in QSignalMapper::qt_metacall (this=0xb5db6b4, _c=QMetaObject::InvokeMetaMethod, _id=4, _a=0xbfd25308) at .moc/release-shared/moc_qsignalmapper.cpp:87
#27 0x00ed4b7d in metacall (argv=0xbfd25308, idx=8, cl=QMetaObject::InvokeMetaMethod, object=0xb5db6b4) at kernel/qmetaobject.cpp:237
#28 QMetaObject::metacall (object=0xb5db6b4, cl=QMetaObject::InvokeMetaMethod, idx=8, argv=0xbfd25308) at kernel/qmetaobject.cpp:232
#29 0x00ee3a6a in QMetaObject::activate (sender=0xb4bad58, m=0x58a0a28, local_signal_index=2, argv=0xbfd25308) at kernel/qobject.cpp:3278
#30 0x05659e1d in QAbstractButton::clicked (this=0xb4bad58, _t1=false) at .moc/release-shared/moc_qabstractbutton.cpp:206
#31 0x0535858d in QAbstractButtonPrivate::emitClicked (this=0xb5abde0) at widgets/qabstractbutton.cpp:546
#32 0x05359bfb in QAbstractButtonPrivate::click (this=0xb5abde0) at widgets/qabstractbutton.cpp:539
#33 0x05359eb6 in QAbstractButton::mouseReleaseEvent (this=0xb4bad58, e=0xbfd258bc) at widgets/qabstractbutton.cpp:1121
#34 0x04f9ef98 in QWidget::event (this=0xb4bad58, event=0xbfd258bc) at kernel/qwidget.cpp:8295
#35 0x05359159 in QAbstractButton::event (this=0xb4bad58, e=0xbfd258bc) at widgets/qabstractbutton.cpp:1080
#36 0x053fb798 in QPushButton::event (this=0xb4bad58, e=0xbfd258bc) at widgets/qpushbutton.cpp:683
#37 0x04f44d54 in notify_helper (e=0xbfd258bc, receiver=0xb4bad58, this=0x82aa600) at kernel/qapplication.cpp:4486
#38 QApplicationPrivate::notify_helper (this=0x82aa600, receiver=0xb4bad58, e=0xbfd258bc) at kernel/qapplication.cpp:4458
#39 0x04f4adbb in QApplication::notify (this=0x82aa600, receiver=0xb4bad58, e=0xbfd258bc) at kernel/qapplication.cpp:4047
#40 0x002f7681 in KApplication::notify (this=0xbfd260e4, receiver=0xb4bad58, event=0xbfd258bc) at ../../kdeui/kernel/kapplication.cpp:311
#41 0x00ece19e in QCoreApplication::notifyInternal (this=0xbfd260e4, receiver=0xb4bad58, event=0xbfd258bc) at kernel/qcoreapplication.cpp:787
#42 0x04f45d15 in sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#43 QApplicationPrivate::sendMouseEvent (receiver=0xb4bad58, event=0xbfd258bc, alienWidget=0xb4bad58, nativeWidget=0xb5c0e50, buttonDown=0x58afeb4, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:3146
#44 0x04fd22c4 in QETWidget::translateMouseEvent (this=0xb5c0e50, event=0xbfd25d3c) at kernel/qapplication_x11.cpp:4568
#45 0x04fd0e4d in QApplication::x11ProcessEvent (this=0xbfd260e4, event=0xbfd25d3c) at kernel/qapplication_x11.cpp:3690
#46 0x04ffd24c in x11EventSourceDispatch (s=0x82ad510, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#47 0x077db25f in g_main_context_dispatch () from /lib/i386-linux-gnu/libglib-2.0.so.0
#48 0x077db990 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#49 0x077dbc2a in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#50 0x00efcada in QEventDispatcherGlib::processEvents (this=0x8282298, flags=...) at kernel/qeventdispatcher_glib.cpp:422
#51 0x04ffce3a in QGuiEventDispatcherGlib::processEvents (this=0x8282298, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#52 0x00ecd1dd in QEventLoop::processEvents (this=0xbfd26044, flags=...) at kernel/qeventloop.cpp:149
#53 0x00ecd421 in QEventLoop::exec (this=0xbfd26044, flags=...) at kernel/qeventloop.cpp:201
#54 0x00ed219d in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1064
#55 0x04f428f4 in QApplication::exec () at kernel/qapplication.cpp:3760
#56 0x0804ac91 in main (argc=) at ../../../kontact/src/main.cpp:218

Reported using DrKonqi
Comment 1 Laurent Montel 2011-11-15 20:51:39 UTC
it was an existing script or new script that you canceled ?
Comment 2 Laurent Montel 2011-11-16 08:00:30 UTC
Git commit e8cf14978305e4afb3b6b20e8131d1a94fd52bff by Montel Laurent.
Committed on 16/11/2011 at 08:59.
Pushed by mlaurent into branch 'master'.

Fix Bug 286663 - Kontact crashed when canceling creation of sieve script

FIXED-IN: 4.7.4
BUG: 286663

M  +3    -3    libksieve/ksieveui/managesievescriptsdialog.cpp
M  +1    -1    libksieve/ksieveui/managesievescriptsdialog.h

http://commits.kde.org/kdepim/e8cf14978305e4afb3b6b20e8131d1a94fd52bff
Comment 3 Laurent Montel 2011-11-16 08:01:22 UTC
Git commit 09f7d5c0bf4652dbc5af5a3cb909d380ce3bba12 by Montel Laurent.
Committed on 16/11/2011 at 08:59.
Pushed by mlaurent into branch 'KDE/4.7'.

Fix Bug 286663 - Kontact crashed when canceling creation of sieve script

FIXED-IN: 4.7.4
BUG: 286663
(cherry picked from commit e8cf14978305e4afb3b6b20e8131d1a94fd52bff)

M  +3    -3    libksieve/ksieveui/managesievescriptsdialog.cpp
M  +1    -1    libksieve/ksieveui/managesievescriptsdialog.h

http://commits.kde.org/kdepim/09f7d5c0bf4652dbc5af5a3cb909d380ce3bba12
Comment 4 karaluh 2011-11-16 09:07:04 UTC
(In reply to comment #1)
> it was an existing script or new script that you canceled ?

Newly created.
Comment 5 Bruno Friedmann 2012-02-28 06:30:34 UTC
Created attachment 69158 [details]
New crash information added by DrKonqi

kmail (4.8.0) on KDE Platform 4.8.00 (4.8.0 "release 2" using Qt 4.8.0

- What I was doing when the application crashed: crash occur with 4.8 (so everything is not perfect). First open the sieve script editor, create a wrong modification (to have error status), then cancel. 
Return to your imap folders, read one or two mails, try to call again the sieve manager : the crash occur.

-- Backtrace (Reduced):
#6  KSieveUi::ManageSieveScriptsDialog::killAllJobs (this=0x1501a350, disconnectSignal=false) at /usr/src/debug/kdepim-4.8.0/libksieve/ksieveui/managesievescriptsdialog.cpp:103
#7  0x00007f4e8b832866 in KSieveUi::ManageSieveScriptsDialog::clear (this=0x1501a350, disconnect=<optimized out>) at /usr/src/debug/kdepim-4.8.0/libksieve/ksieveui/managesievescriptsdialog.cpp:347
#8  0x00007f4e8b832b55 in KSieveUi::ManageSieveScriptsDialog::slotRefresh (this=0x1501a350, disconnectSignal=<optimized out>) at /usr/src/debug/kdepim-4.8.0/libksieve/ksieveui/managesievescriptsdialog.cpp:150
[...]
#10 0x00007f4e83e00692 in KManageSieve::SieveJob::result (this=<optimized out>, _t1=0x1496f6c0, _t2=true, _t3=<optimized out>, _t4=false) at /usr/src/debug/kdepim-4.8.0/build/libksieve/kmanagesieve/sievejob.moc:129
#11 0x00007f4e83e021e9 in KManageSieve::SieveJob::Private::handleResponse (this=0x14eec3b0, response=<optimized out>, data=...) at /usr/src/debug/kdepim-4.8.0/libksieve/kmanagesieve/sievejob.cpp:200
Comment 6 Christophe Marin 2012-04-29 13:01:00 UTC
*** Bug 298941 has been marked as a duplicate of this bug. ***