Fix Bug 286663 - Kontact crashed when canceling creation of sieve script

FIXED-IN: 4.7.4
BUG: 286663
(cherry picked from commit e8cf14978305e4afb3b6b20e8131d1a94fd52bff)